--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Isso é html</h1>
+    <h2>hhhhh</h2>
     <!--é assim que faz comentário no HTML-->
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.<br><!--a tag br é usada para uma quebra de linha--> Architecto non quis omnis atque maxime rerum fugiat unde laborum, ipsam rem harum placeat sunt ad tempore hic consequatur suscipit dolor repellat? &lt;p&gt;/p&gt;</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis cupiditate quisquam consequuntur quae iusto similique voluptate voluptatem dolore assumenda aspernatur, tempore repudiandae quas voluptatibus aut ex odit facilis velit magni! &lt;br&gt;</p>
